--- a/css/game.css
+++ b/css/game.css
@@ -11,6 +11,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    pointer-events: none;
 }
 
 .wrapper__root__wrapper__cards {
@@ -21,7 +22,7 @@
     align-items: center;
     flex-wrap: wrap;
     margin-bottom: -20px;
-    pointer-events: none;
+    transition: linear 200ms;
 }
 
 .root__wrapper__cards__card {
@@ -30,7 +31,6 @@
     height: 220px;
     margin-bottom: 20px;
     cursor: pointer;
-    pointer-events: initial;
 }
 
 .root__wrapper__cards__card__content {
@@ -38,6 +38,7 @@
     height: 100%;
     transition: transform 1s;
     transform-style: preserve-3d;
+    pointer-events: initial;
 }
 
 .root__wrapper__cards__card__content__frontSide {
@@ -71,6 +72,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    pointer-events: initial;
 }
 
 .background_music {
@@ -98,12 +100,14 @@
     opacity: 1;
     visibility: visible;
     pointer-events: initial;
+    transition: linear 200ms;
 }
 
 .close_icon {
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
+    transition: linear 200ms;
 }
 
 #volume_level {
